[gd_scene load_steps=3 format=3 uid="uid://b0okl2t26t6kw"]

[ext_resource type="Script" path="res://Game/Projectiles/Definitions/projectile.gd" id="1_pewvj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yfjv0"]
radius = 25.02

[node name="Projectile" type="RayCast2D"]
target_position = Vector2(0, 0)
script = ExtResource("1_pewvj")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_yfjv0")

[node name="DebugTracer" type="Line2D" parent="."]
top_level = true
width = 2.0
default_color = Color(1, 0, 0.0470588, 1)

[node name="Timer" type="Timer" parent="."]

[node name="Node" type="Node" parent="."]

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
